added a kit awesome embbeded code

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/883af39e56.js"
+      crossorigin="anonymous"
+    ></script>
     <title>week 4 project</title>
   </head>
   <body></body>
