added the body content and a button

--- a/index.html
+++ b/index.html
@@ -32,5 +32,10 @@
     ></script>
     <title>week 4 project</title>
   </head>
-  <body></body>
+  <body>
+    <p>👋 Hello, I am</p>
+    <h1>Dlayane Matjila</h1>
+    <h2>Front-End Developer based in South Africa</h2>
+    <a href="#" class="btn btn-branding">Contact Me</a>
+  </body>
 </html>
