added a background color and styked my p and h1

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
     <title>week 4 project</title>
   </head>
   <body>
-    <p>👋 Hello, I am</p>
-    <h1>Dlayane Matjila</h1>
-    <h2>Front-End Developer based in South Africa</h2>
-    <a href="#" class="btn btn-branding">Contact Me</a>
+    <div class="hero">
+      <
+      <p>👋 Hello, I am</p>
+      <h1>Dlayane Matjila</h1>
+      <h2>Front-End Developer based in South Africa</h2>
+      <a href="#" class="btn btn-branding">Contact Me</a>
+    </div>
   </body>
 </html>
